@@ -19,7 +19,7 @@ matrix:
     fast_finish: true
 env:
     global:
-        - KNOT_DNS_VERSION=2.7
+        - KNOT_DNS_VERSION=master  # TODO change to 2.8 once Knot DNS is branched
         - MALLOC_CHECK_=3
         - MALLOC_PERTURB_=223
 before_script:
